Restore `jdk.proxy*` filter removed by "8382582: Remove the experimental JVMCI feature"